tests/ui/traits/bound/assoc-fn-bound-root-obligation.stderr
error[E0277]: expected a `FnMut<(char,)>` closure, found `u8`
  --> $DIR/assoc-fn-bound-root-obligation.rs:2:7
   |
LL |     s.strip_suffix(b'\n').unwrap_or(s)
   |       ^^^^^^^^^^^^ expected an `FnMut<(char,)>` closure, found `u8`
   |
   = help: the trait `FnMut<(char,)>` is not implemented for `u8`
   = help: the following other types implement trait `Pattern<'a>`:
             char
             [char; N]
             &'b String
             &'b [char; N]
             &'b [char]
             &'c &'b str
             &'b str
   = note: required for `u8` to implement `Pattern<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
